@@ -1,3 +1,8 @@
+2002-09-27  Theodore A. Roth  <troth@verinet.com>
+
+	* configure.in(AM_INIT_AUTOMAKE): Bump version.
+	* include/setjmp.h: Add extern "C" for C++ usage.
+
 2002-09-25  Theodore A. Roth  <troth@verinet.com>
 
 	* configure.in(AM_INIT_AUTOMAKE): Bump version.
